--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "build-lib": "./node_modules/.bin/webpack",
     "storybook": "yarn build-lib && yarn link && yarn link 'storybook-example' && start-storybook -p 6006",
-    "build-storybook": "yarn build-lib && yarn link && yarn link 'storybook-example' && build-storybook"
+    "build-storybook": "yarn build-lib && yarn link && yarn link 'storybook-example' && build-storybook",
+    "build-reference": "node ./node_modules/backstopjs/cli/index.js reference --config=./backstop.json",
+    "test": "node ./node_modules/backstopjs/cli/index.js test --config=./backstop.json"
   },
   "husky": {
     "hooks": {
@@ -37,6 +39,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "backstopjs": "^4.1.9",
     "bem-cn": "3.0.1",
     "bootstrap": "3.4.1",
     "classnames": "2.2.6",
