--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "build-lib": "./node_modules/.bin/webpack",
     "storybook": "yarn build-lib && yarn link && yarn link 'storybook-example' && start-storybook -p 6006",
+    "test": "./node_modules/backstopjs/cli/index.js test",
+    "backstop": "./node_modules/backstopjs/cli/index.js",
     "build-storybook": "yarn build-lib && yarn link && yarn link 'storybook-example' && build-storybook"
   },
   "husky": {
@@ -37,6 +39,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "backstopjs": "^4.1.12",
     "bem-cn": "3.0.1",
     "bootstrap": "3.4.1",
     "classnames": "2.2.6",
